syntax = "proto3";

package hvxahv.v1alpha1.proto;
option go_package = "github.com/hvxahv/hvxahv/api/channel/v1alpha1";

service SubscriberService {
  rpc AddSubscriber(AddSubscriberRequest) returns (AddSubscriberResponse) {}
  rpc Unsubscribe(UnsubscribeRequest) returns (UnsubscribeResponse) {}

  // RemoveSubscriber Only the administrator of the channel
  // can call to remove the subscribers of the channel.
  rpc RemoveSubscriber(RemoveSubscriberRequest) returns (RemoveSubscriberResponse) {}
  rpc GetAllSubscribers(GetAllSubscribersRequest) returns (GetAllSubscribersResponse) {}
}

message AddSubscriberRequest {
  string channel_id = 1;
  string account_id = 2;
}

message AddSubscriberResponse {
  string code = 1;
  string reply = 2;
}

message UnsubscribeRequest {
  string channel_id = 1;
  string account_id = 2;
}

message UnsubscribeResponse {
  string code = 1;
  string reply = 2;
}

message RemoveSubscriberRequest {
  string admin_id = 1;
  string channel_id = 2;
  string subscriber_id = 3;
}

message RemoveSubscriberResponse {
  string code = 1;
  string reply = 2;
}

message GetAllSubscribersRequest {
  string channel_id = 1;
  string admin_id = 2;
}

message GetAllSubscribersResponse {
  string code = 1;
  repeated string subscriber = 2;
}